# vqa-llm-framework

./: Framework_VQA.ipynb  README.md  main.py  pyproject.toml
data/: coco-dev-sample.json  coco-eval-questions.json  vqa-eval.json  vqa_report.csv
data/1_question_datasets/: coco_questions.json  vqa_questions.json
data/2_answered_question_datasets/: coco_answered.json  vqa_answered.json
data/3_assessment_results_datasets/: coco_assessment_results.json  vqa_assessment_results.json
data/answers/: llama-coco.csv  llama-vqa.csv  paligemma-coco.csv  paligemma-vqa.csv
data/human_eval/: correlations.json  llama-coco.csv  llama-vqa.csv  paligemma-coco.csv  paligemma-vqa.csv  summary.json
data/results/: llama-coco-assessment-generations.csv  llama-coco-assessment.json  llama-coco-results-merged.csv  llama-coco-results.csv  llama-coco-summary.json  llama-vqa-assessment-generations.csv  llama-vqa-assessment.json  llama-vqa-results-merged.csv  llama-vqa-results.csv  llama-vqa-summary.json  paligemma-coco-assessment-generations.csv  paligemma-coco-assessment.json  paligemma-coco-results-merged.csv  paligemma-coco-results.csv  paligemma-coco-summary.json  paligemma-vqa-assessment-generations.csv  paligemma-vqa-results-merged.csv  paligemma-vqa-results.csv  (+1 more)
notebooks/: Data_Collection.ipynb  Framework_VQA.ipynb
scripts/: calculate_correlation.py  evaluate_answers.py  llama_generate.py  merge_binary_results.py  response_generator.py  summarize_human_eval.py  vqa_data_prep.py
tests/: test_basic_metrics.py  test_collection.py  test_faithfulness.py  test_relevancy.py
(+20 files in other folders)
